--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         </div>
                     </div>
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">The solution includes an embedded zero footprint (ZFP) viewer that requires no downloads, installations, or plugins.  </p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">The solution includes an embedded zero footprint viewer that requires no downloads, installations, or plugins. A more powerful JAVA based web-viewer is also included.</p>
                     </div>
                 </div>
             </div>
@@ -257,7 +257,7 @@
                     <h4 class="card-title media-body py-3 mbr-fonts-style display-7">Extensive Security</h4>
                 </div>
                 <div class="card-box">
-                    <p class="mbr-text mbr-fonts-style display-7">The security subsystem is designed to protect the very sensitive information, which is stored and processed by the system, and can be encrypted while stored and/or transferred to user workstations. Users are assigned roles that specify their access rights to the system using fine-grained rules ranging.&nbsp;</p>
+                    <p class="mbr-text mbr-fonts-style display-7">The security subsystem is designed to protect sensitive information, which is stored and processed by the system, and can be encrypted while stored and/or transferred to user workstations. Users are assigned roles that specify their access rights to the system using fine-grained rules ranging.&nbsp;</p>
                 </div>
             </div>
         </div>
@@ -302,7 +302,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/perrad-4-800x600.png" alt="Mobirise" title="">
+                        <img src="assets/images/pere.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5">Peregrine Radiology</h4>
@@ -311,7 +311,17 @@
                 </div>
             </div>
 
-            
+            <div class="card p-3 col-12 col-md-6">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="assets/images/chds.png" alt="Mobirise" title="">
+                    </div>
+                    <div class="card-box ">
+                        <h4 class="card-title pb-3 mbr-fonts-style display-5">Clinica Hospital Dr. Saturno</h4>
+                        <p class="mbr-text mbr-fonts-style display-7">Panama<br></p>
+                    </div>
+                </div>
+            </div>
 
             
 
@@ -536,7 +546,7 @@ Miami Springs Animal Hospital</h4>
                     <div class="card-box ">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5">Veazie Veterinary Clinic
 </h4>
-                        <p class="mbr-text mbr-fonts-style display-7">USA<br>www.veazievet.com<br></p>
+                        <p class="mbr-text mbr-fonts-style display-7">USA<br><a href="http://www.veazievet.com" class="text-white">www.veazievet.com</a><br></p>
                     </div>
                 </div>
             </div>
@@ -715,7 +725,7 @@ Miami Springs Animal Hospital</h4>
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/v" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with Mobirise - <a href="https://mobirise.site/l" style="color:#aaa;">Click now</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>  <script src="assets/sociallikes/social-likes.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/u" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Made with <a href="https://mobirise.site/a" style="color:#aaa;">Mobirise</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>  <script src="assets/sociallikes/social-likes.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
